--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ yenendoner.value=Number(yenendoner.value)+1;
 
 <h1><font face="Arial">Döner Yemek İçin Tıkla</h1>
 <p><font face="Arial">Tıklayarak Döner Yeme Similatörü</p>
-<input type="image" onclick="donerye()" src="döner.jpg" width="500px"><br>
+<input type="image" onclick="donerye()" src="döner.jpg" width="500px" align="center"><br>
 <p>Yediğin Döner Porsiyonu Sayısı: </p>
 <input type="button" id="doner" value="0" width="1000px">
 
